# job-search-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PROGRESS.md  README.md  SPEC.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: lint.yml
backend/: __init__.py  config.py
backend/agents/: AGENTS.md  __init__.py  checkpointer.py  cv_parser.py  detail_scraper.py  job_searcher.py  orchestrator.py  quick_searcher.py
backend/alembic/: env.py
backend/alembic/versions/: c8d44668e193_initial_schema.py
backend/api/: __init__.py  app.py  limiter.py  schemas.py
backend/api/routes/: bookmarks.py  chat.py  cv.py  preferences.py  profile.py  search.py
backend/db/: __init__.py  base.py  tables.py
backend/tools/: __init__.py  brave_search.py  firecrawl.py  pdf_parser.py  tavily_search.py
backend/utils/: __init__.py  parser.py
docs/: PROGRESS.md  tech_spec.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: api.js  index.css
frontend/src/components/: CVUpload.jsx  Chat.jsx  ChatInput.jsx  ChatMessage.jsx  Header.jsx  JobCard.jsx  JobResults.jsx  Profile.jsx  SearchButton.jsx  Sidebar.jsx
scripts/: test_hitl.py  test_job_search.py  test_migrations.py  test_sessions.py  test_streaming.py  test_two_phase.py
tests/: test_health.py  test_parser.py
